2009-12-15
KEGGgraph 1.3.2:'indirect' subtype has been renamed into 'indirect effect', KEGGEdgeSubtype.csv file makes modifications. Thanks Siyuan Zhang for reporting the bug.

2009-11-23
KEGGgraph 1.3.1:KEGG FTP server is again changed, from 'ftp://ftp.genome.jp/pub/kegg/xml/kgml/non_metabolic/organisms' to 'ftp://ftp.genome.jp/pub/kegg/xml/kgml/non-metabolic/organisms'. Note the minus and underscore. Thanks Tim Fraser and Marc Carlson for reporting.

2009-10-18
KEGGgraph 1.1.13: Add Makefile to facilitate the check/install, and the try-download mechanism of retrieveKGML is documented in the vignette.
2009-10-01
KEGGgraph 1.1.12: Update due to the change of FTP sites of KEGG website.Now pathways are stored separatedly depending whether they are metabolic pathways or not. KEGGgraph is now able to automatically download files.

2009-06-28
KEGGgraph 1.1.9: KEGGgraph software supports multiple substrates/products in KGML reaction from version 1.1.9. Earlier versions only read the first pair. Code name 'Kitty', thanking report from Plaimas Kitiporn, DKFZ.

2009-04-27
KEGGgraph 1.1.1: Improved render of KEGG pathway graphs with new interface of Rgraphviz, nodeRenderInfo parameter renamed into nodeRenderInfos to avoid conflict

2008-12-11
KEGGgraph 0.8.6: 'KEGGpathway2reactionGraph' added to parse compound reaction network into graph. Documentationss updated

2008-12-11
KEGGgraph 0.8.5: Help pages updated with detailed examples, 'getReactions' series of functions are tested.

2008-10-28
KEGGgraph 0.8.4: 'group' entries (complexes in most cases) are also parsed and expanded by default now.

2008-10-28
KEGGgraph 0.8.3: 'Collate' field added in DESCRIPTION file

2008-10-27
KEGGgraph 0.8.2: 'mergeKEGGgraph' function added to keep KEGGnodeData and KEGGedgeData even after merging graphs

2008-10-27
KEGGgraph 0.8.1: 'subKEGGgraph' function added to maintain KEGGnodeData and KEGGedgeData even after subsetting graphs

2008-10-24